--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@ S176,33.2,172.3,19.4z M70,88.2V35.8L116,62L70,88.2z"></path>
             <span>ミニスタが<br class="txt_sp">選ばれる理由</span>
           </h2>
           <p class="fz20 txt-ctr mgn-btm56 scroll_active active">
-            ミニスタの強みは、インターネット・<br class="txt_sp">創造力・自己表現力を日々活かしている<br>現役YouTuber現役YouTuberの対面授業を現役YouTuberの対面授業を良心的な<br class="txt_sp">価格で受けられることです。<br>また、良質なサービスを安心して<br class="txt_sp">受けていただけます。
+            ミニスタの強みは、インターネット・<br class="txt_sp">創造力・自己表現力を日々活かしている<br>現役YouTuberの対面授業を良心的な<br class="txt_sp">価格で受けられることです。<br>また、良質なサービスを安心して<br class="txt_sp">受けていただけます。
           </p>
         </div>
         <div class="reprint_top" style="padding: 1px; min-height: 100vh;" cz-shortcut-listen="true">
@@ -1174,7 +1174,7 @@ S176,33.2,172.3,19.4z M70,88.2V35.8L116,62L70,88.2z"></path>
                                         "> 円</span></p>
                         <small style="font-size: 90%; color: #888;">通常価格</small>
                         <p class="planlist__price__num" style="
-                                            font-size: 1.35rem;
+                                            font-size: 1.9rem;
                                             line-height: normal;
                                         ">25,000<span class="planlist__price__per"> 円</span></p>
                       </div>
