--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-TG4JR5HM');</script>
   <!-- End Google Tag Manager -->
+  <!--------- AdobeFonts --------->
+  <script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-PP3R8SQB"></script>
+  <script src="https://use.typekit.net/qva8jxf.js" async=""></script>
+  <script>
+    (function (d) {
+      var config = {
+        kitId: 'qva8jxf',
+        scriptTimeout: 3000,
+        async: true
+      },
+        h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
+    })(document);
+  </script>
+  <style>
+    .tk-dnp-shuei-mgothic-std {
+      font-family: "dnp-shuei-mgothic-std", sans-serif;
+    }
+  </style>
+  <!-- Slick用CSS -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+  <!-- Slick用JS -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,11 +46,13 @@
     }
   </script>
   <meta name="viewport" content="width=1440,maximum-scale=2.0,user-scalable=1">
+  <meta name="viewport" content="width=1440,maximum-scale=2.0,user-scalable=1">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,user-scalable=1">
   <meta name="format-detection" content="telephone=no">
   <title>【公式】子ども向けオンライン動画制作スクール「ミニスタ」</title>
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
+  <!-- This site is optimized with the Yoast SEO plugin v23.4 - https://yoast.com/wordpress/plugins/seo/ -->
   <meta name="description"
     content="【60分の無料体験実施中】動画編集を学ぶなら、ミニスタへ。ミニスタは、チャンネル登録者数65万人以上を誇る大人気YouTuber「けなそゆ」が運営する子ども向けオンライン動画制作スクールです。小学生・中学生のお子さまの習い事におすすめです。">
   <link rel="canonical" href="https://minista-school.com/">
@@ -94,29 +120,11 @@
     href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&amp;family=Outfit:wght@100..900&amp;family=Zen+Maru+Gothic:wght@400;500&amp;display=swap"
     rel="stylesheet">
 
-  <!--------- AdobeFonts --------->
-  <script>
-    (function (d) {
-      var config = {
-        kitId: 'qva8jxf',
-        scriptTimeout: 3000,
-        async: true
-      },
-        h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
-    })(document);
-  </script>
   <style>
     .tk-dnp-shuei-mgothic-std {
       font-family: "dnp-shuei-mgothic-std", sans-serif;
     }
   </style>
-  <!-- Slick用CSS -->
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-  <!-- Slick用JS -->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body class="home" id="top" style="" cz-shortcut-listen="true">
@@ -124,6 +132,7 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TG4JR5HM" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+
   <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1"
     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
