--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@ S176,33.2,172.3,19.4z M70,88.2V35.8L116,62L70,88.2z"></path>
               class="txt_sp">価格で受けられることです。<br>また、良質なサービスを安心して<br class="txt_sp">受けていただけます。
           </p>
         </div>
-        <div class="reprint_top" style="padding: 1px; min-height: 100vh;" cz-shortcut-listen="true">
+        <div class="reprint_top" style="padding: 1px;" cz-shortcut-listen="true">
           <ol class="reason-lists">
             <li class="reason-lists__items" id="reason-4">
               <section class="reason-box forth">
